test/errors/error4.sp
%id_1>id_2.
sorts
#s=4..3.  
predicates
rules
